// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <p>
    Expenses Summary
  </p>
  <p>
    Viewing 
    1
     
    expense
     totaling 
    $1.00
  </p>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <p>
    Expenses Summary
  </p>
  <p>
    Viewing 
    23
     
    expenses
     totaling 
    $1.00
  </p>
</div>
`;
